<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RewardFragment">

    <TextView
        android:id="@+id/reward_title"
        android:text="@string/reward_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/progress_button"
        app:layout_constraintTop_toBottomOf="@+id/reward_subtitle">

        <androidx.constraintlayout.widget.Group
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="reward_subtitle,reward_text,badge_container" />
    </ScrollView>

    <TextView
        android:id="@+id/reward_subtitle"
        android:text="@string/reward_subtitle_text"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/reward_title">
    </TextView>

    <TextView
        android:id="@+id/reward_text"
        android:text="@string/reward_text_text"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/reward_subtitle">
    </TextView>
    <!--
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="123dp"
     -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/badge_container"
        app:layout_constraintTop_toBottomOf="@+id/reward_text"
        app:layout_constraintBottom_toTopOf="@+id/progress_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
    </LinearLayout>

    <Button
        android:id="@+id/progress_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/progress_button_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>