<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProgressFragment">

    <TextView
        android:id="@+id/progress_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/progress_screen_title"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/progress_scroll"
        android:layout_height="490dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/menu_button"
        app:layout_constraintTop_toBottomOf="@+id/progress_title">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="group_progress_questionnaire,group_progress_badge_collection" />
    </ScrollView>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_progress_questionnaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="progress_questionnaire_title,progress_questionnaire_container"
        app:layout_constraintTop_toBottomOf="@+id/progress_title" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_progress_badge_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="progress_badge_collection_title,progress_badge_collection_container"
        app:layout_constraintTop_toBottomOf="@+id/progress_questionnaire_container" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/menu_button_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="20dp">
    </Button>

    <TextView
        android:id="@+id/progress_questionnaire_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/progress_questionnaire_title_text"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/progress_title">
    </TextView>

    <TextView
        android:id="@+id/progress_badge_collection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/progress_badge_collection_title_text"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/progress_questionnaire_container">
    </TextView>

    <LinearLayout
        android:id="@+id/progress_questionnaire_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/progress_questionnaire_title">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_badge_collection_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/progress_badge_collection_title" >
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>